--- a/src/organisms/about/style.css
+++ b/src/organisms/about/style.css
@@ -294,6 +294,7 @@
 
   .about .container .contact-card .contact-card-box .info-contact .info-contact-content {
     font-size: 0.7rem;
+    line-height: 1.2rem;
   }
 
   .about .container .contact-card .contact-card-box .info-contact {
