--- a/src/organisms/testimonial/style.css
+++ b/src/organisms/testimonial/style.css
@@ -67,7 +67,7 @@
   }
   .testimonial .container h1.main-title {
     text-align: center;
-    font-size: 2rem;
+    font-size: 2.2rem;
     line-height: 2rem;
   }
   
@@ -89,11 +89,21 @@
   .testimonial .user-container .user-info h5, .testimonial .user-container .user-info p {
     font-size: 0.9rem;
   }
+  .testimonial .container .card-item .card-item-container {
+    padding: 1.5rem 1rem;
+  }
 }
 
 @media only screen and (max-width: 330px) {
-  .testimonial .container h1.main-title {
-    font-size: 1.8rem;
-    line-height: 2rem;
+  .testimonial .container .card-item .card-item-container .title {
+    font-size: 1.05rem;
+  }
+  .testimonial .container .card-item .card-item-container .text {
+    padding: 0.5rem 0;
+    font-size: 0.75rem;
+    line-height: 1.5rem;
+  }
+  .testimonial .user-container .user-info h5, .testimonial .user-container .user-info p {
+    font-size: 0.8rem;
   }
 }
