--- a/src/pages/home/components/content/style.css
+++ b/src/pages/home/components/content/style.css
@@ -147,7 +147,7 @@
   .content-web .container h1.main-title {
     text-align: center;
     font-size: 2.2rem;
-    line-height: 2.8rem;
+    line-height: 2.5rem;
   }
   
   .content-web .container .img {
@@ -182,9 +182,13 @@
   }
 }
 
-@media only screen and (max-width: 330px) {
+@media only screen and (max-width: 380px) {
   .content-web .container h1.main-title {
     font-size: 1.8rem;
     line-height: 2rem;
+  }
+  .content-web .container .detail .text {
+    font-size: 0.75rem;
+    line-height: 1.15rem;
   }
 }
