--- a/src/pages/menu/components/menu-hero/style.css
+++ b/src/pages/menu/components/menu-hero/style.css
@@ -19,7 +19,7 @@
   padding-top: 1.125rem;
   line-height: 1.5rem;
 
-  width: 53%;
+  width: 51%;
   margin: 0 auto;
 }
 
@@ -61,9 +61,18 @@
   text-align: center;
 }
 
+@media only screen and (max-width: 1520px) {
+  .menu-hero .title p {
+    width: 53%;
+  }
+}
+
 @media only screen and (max-width: 1440px) {
   .menu-hero .cards .card .text {
     padding: 0.7rem 1rem 1.3rem 1rem;
+  }
+  .menu-hero .title p {
+    width: 55%;
   }
 }
 
@@ -108,6 +117,12 @@
   
   .menu-hero .cards .card .desc {
     font-size: 0.85rem;
+  }
+}
+
+@media only screen and (max-width: 1281px) {
+  .menu-hero .title p {
+    width: 57%;
   }
 }
 @media only screen and (max-width: 1276px) {
@@ -266,6 +281,7 @@
   .menu-hero .title p {
     font-size: 0.7rem;
     line-height: 1rem;
+    padding-top: 0;
   }
   .menu-hero .cards .card .text {
     padding: 0.5rem 0.4rem 1rem 0.4rem;
