--- a/src/molecules/booking-form/style.css
+++ b/src/molecules/booking-form/style.css
@@ -32,7 +32,7 @@
   bottom: 0.99rem;
 }
 
-.book .hero .form .input-group .date-icon {
+.book .hero .form .input-group .input-icon {
   color: #737865 !important;
   font-size: 0.88rem;
   position: absolute;
