--- a/src/pages/menu/components/menu-hero/style.css
+++ b/src/pages/menu/components/menu-hero/style.css
@@ -298,3 +298,10 @@
     font-size: 0.6rem;
   }
 }
+
+@media only screen and (max-width: 330px){
+  .menu-hero .title p {
+    font-size: 0.6rem;
+    line-height: 0.8rem;
+  }
+}
