--- a/src/pages/blog/style.css
+++ b/src/pages/blog/style.css
@@ -209,3 +209,13 @@
     font-size: 0.8rem;
   }
 }
+
+@media only screen and (max-width: 330px){
+  .blog-page .container .title h1.main-title {
+    font-size: 1.9rem;
+  }
+  .blog-page .title p {
+    font-size: 0.6rem;
+    line-height: 0.8rem;
+  }
+}
