--- a/src/pages/contact/style.css
+++ b/src/pages/contact/style.css
@@ -365,6 +365,9 @@
 }
 
 @media only screen and (max-width: 485px) {
+  .contact-page .hero .title {
+    width: 85%;
+  }
   .contact-page .hero {
     padding: 2rem 0 10rem 0;
   }
@@ -412,5 +415,11 @@
   }
   .contact-page .info .call .text {
     font-size: 0.6rem;
+  }
+}
+@media only screen and (max-width: 330px){
+  .contact-page .hero .title p {
+    font-size: 0.6rem;
+    line-height: 0.8rem;
   }
 }
