--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
 
   --backgound: #474747;
   --background-2: rgba(249, 249, 247, 0.12);
-  --shadow: rgba(0, 0, 0, 0.08);
+  --shadow: 0px 2.979px 59.574px 0px rgba(0, 0, 0, 0.08);
   
   --font-1: 'DM Sans', sans-serif;
   --font-2: 'Playfair Display', serif;
