--- a/src/atoms/card/blogCard/style.css
+++ b/src/atoms/card/blogCard/style.css
@@ -1,7 +1,7 @@
 .card-box {
   background-color: var(--color-1);
   border-radius: 0.8rem;
-  box-shadow: 0px 2.979px 59.574px 0px var(--shadow);
+  box-shadow: var(--shadow);
 
 }
 
