--- a/src/molecules/bookingForm/style.css
+++ b/src/molecules/bookingForm/style.css
@@ -10,7 +10,7 @@
   border: 1px solid var(--color-1);
   background: var(--color-1);
 
-  box-shadow: 0px 2.979px 59.574px 0px var(--shadow);
+  box-shadow: var(--shadow);
 }
 
 .book .hero .form form {
