--- a/src/atoms/button/style.css
+++ b/src/atoms/button/style.css
@@ -5,9 +5,11 @@ button {
   font-weight: 800;
   font-size: 1rem;
   font-family: 'DM Sans', sans-serif;
-  
-  transition: ease;
-  transition-duration: 0.3s;
+  transition: var(--transition-1);
+}
+
+button:hover {
+  transition: var(--transition-1);
 }
 
 button.primary {
@@ -20,8 +22,6 @@ button.primary:hover {
   background-color: transparent;
   color: #2C2F24;
   border: 2px solid var(--secondary-color);
-  transition: ease;
-  transition-duration: 0.3s;
 }
 
 button.secondary {
@@ -33,8 +33,6 @@ button.secondary:hover {
   background-color: var(--primary-color);
   border: 2px solid var(--primary-color);
   color: var(--color-1);
-  transition: ease;
-  transition-duration: 0.3s;
 }
 
 button.btn-no-border {
