--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,15 @@
   --color-7: #495460;
   --color-8: #ADB29E;
   --color-9: #DBDFD0;
+  --color-10: #5c6053;
 
   --border-1: 1px solid #DBDFD0;
 
   --backgound: #474747;
   --background-2: rgba(249, 249, 247, 0.12);
   --shadow: 0px 2.979px 59.574px 0px rgba(0, 0, 0, 0.08);
+  --transition-1: ease 0.3s;
+  --transition-2: ease 0.4s;
   
   --font-1: 'DM Sans', sans-serif;
   --font-2: 'Playfair Display', serif;
