--- a/src/organisms/about/style.css
+++ b/src/organisms/about/style.css
@@ -23,14 +23,14 @@
 
 
 .about .container .content .content-1 {
-  color: #2C2F24;
+  color: var(--secondary-color);
   font-size: 1.125rem;
   font-weight: 600;
   line-height: 1.75rem;
 }
 
 .about .container .content .content-2 {
-  color: #5c6053;
+  color: var(--color-10);
   font-size: 1rem;
   line-height: 1.5rem;
 }
@@ -211,24 +211,20 @@
     font-weight: 600;
     line-height: 1.65rem;
   }
-  
   .about .container .content .content-2 {
     font-size: 0.85rem;
     line-height: 1.5rem;
   }
-  
   .about .container .content .about-button {
     padding-top: 1.5rem;
     text-align: center;
   }
-
   .about .container .content .about-button button {
     border: 1px solid;
     font-weight: 600;
     font-size: 0.7rem;
     padding: 0.8rem 1rem;
   }
-  
   .about .container .img img {
     padding-right: 0;
   }
