--- a/src/organisms/footer/style.css
+++ b/src/organisms/footer/style.css
@@ -27,9 +27,7 @@ footer .icon-footer {
   background-color: var(--primary-color);
   border-radius: 100%;
   margin-right: 0.75rem;
-
-  transition: ease-in-out;
-  transition-duration: 0.3s;
+  transition: var(--transition-1);
 }
 
 footer .icon-footer:hover path {
@@ -38,8 +36,7 @@ footer .icon-footer:hover path {
 
 footer .icon-footer:hover {
   background-color: var(--color-9);
-  transition: ease-in-out;
-  transition-duration: 0.3s;
+  transition: var(--transition-1);
 }
 
 footer .top .box-2 {
@@ -59,6 +56,7 @@ footer .top .box-2 ul {
 }
 footer .top .box-2 ul li {
   padding-bottom: 1.25rem;
+  transition: var(--transition-1);
 }
 
 footer .top .box-2 ul li a {
@@ -70,8 +68,7 @@ footer .top .box-2 ul li a {
 
 footer .top .box-2 ul li:hover a {
   color: var(--primary-color);
-  transition: ease-in-out;
-  transition-duration: 0.2s;
+  transition: var(--transition-1)
 }
 footer .top .box-3 .img {
   padding-top: 2.5rem;
