--- a/src/organisms/menuPage/menuHero/style.css
+++ b/src/organisms/menuPage/menuHero/style.css
@@ -49,6 +49,7 @@
   padding-top: 4rem;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, minmax(0, 1fr));
   gap: 1.5rem;
 }
 
