--- a/src/pages/blog/style.css
+++ b/src/pages/blog/style.css
@@ -31,16 +31,17 @@
   padding-top: 4rem;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, minmax(0, 1fr));
   gap: 1.5rem;
 }
 
 .blogs .card-box img {
-  transition: ease 0.4s;
+  transition: var(--transition-2);
 }
 
 .blogs .card-box:hover img {
   filter: brightness(60%);
-  transition: ease 0.4s;
+  transition: var(--transition-2);
 }
 
 /* RESPONSIVE */
