--- a/src/pages/contact/style.css
+++ b/src/pages/contact/style.css
@@ -113,6 +113,9 @@
   .contact-page .info {
     padding: 19rem 0 3rem 0;
   }
+  .contact-page .hero .form {
+    top: -6%;
+  }
 }
 
 @media only screen and (max-width: 1276px) {
@@ -162,7 +165,7 @@
 
 @media only screen and (max-width: 991px) {
   .contact-page .hero {
-    padding: 3rem 1.5rem 16rem 1.5rem;
+    padding: 3rem 1.5rem 19rem 1.5rem;
   }
 
   .contact-page .hero .title h1.main-title {
@@ -210,7 +213,7 @@
   }
 
   .contact-page .hero {
-    padding: 3rem 0 16rem 0;
+    padding: 3rem 0 18rem 0;
   }
 
   .contact-page .hero .title p {
@@ -219,7 +222,7 @@
   }
 
   .contact-page .info {
-    padding: 16.5rem 0 3rem 0;
+    padding: 17rem 0 3rem 0;
   }
 
   .contact-page .hero .form {
@@ -246,7 +249,7 @@
 
 @media only screen and (max-width: 770px) {
   .contact-page .hero {
-    padding: 3rem 0 13rem 0;
+    padding: 3rem 0 17rem 0;
   }
   
   .contact-page .hero .title {
@@ -259,6 +262,7 @@
   }
 
   .contact-page .hero .form {
+    top: -12%;
     padding: 2rem 2.2rem;
     width: 70%;
   }
@@ -371,7 +375,7 @@
     width: 85%;
   }
   .contact-page .hero {
-    padding: 2rem 0 10rem 0;
+    padding: 2rem 0 13rem 0;
   }
   .contact-page .hero .title h1.main-title {
     font-size: 2rem;
